# pydeadweight

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  maintenance_notes.md  pyproject.toml  release_blockers.md  technical_debt.md
.github/workflows/: ci.yml
pydeadweight/: __init__.py  classifier.py  cli.py  config.py  discovery.py  extractor.py  manifest.py  models.py  pipeline.py  report.py  resolution.py  writer.py
tests/: test_audit_regressions.py  test_classifier.py  test_cli.py  test_extractor.py  test_manifest.py  test_writer.py
